ExecuteComponents changed to ExecuteInteractions in core Engine